3.0-Push_swap/cc_report_macos.txt
ERROR EXCLUSIVE TO MACOS:

➜  3.0-Push_swap git:(master) ✗ make libft
Compiling libft..
ft_printf2.c:29:32: error: parameter 's' set but not used [-Werror,-Wunused-but-set-parameter]
int     pf_convert_str(const char *s, va_list args)
                                   ^
ft_printf2.c:52:37: error: parameter 's' set but not used [-Werror,-Wunused-but-set-parameter]
short int       pf_convert_ui(const char *s, va_list args)
                                          ^
ft_printf2.c:69:38: error: parameter 's' set but not used [-Werror,-Wunused-but-set-parameter]
short int       pf_convert_hex(const char *s, va_list args, char c)
                                           ^
ft_printf2.c:91:38: error: parameter 's' set but not used [-Werror,-Wunused-but-set-parameter]
short int       pf_convert_ptr(const char *s, va_list args)
                                           ^
4 errors generated.
make[1]: *** [ft_printf2.o] Error 1
make: *** [libft] Error 2